# mmck-checks

./: .travis.yml  COPYING  Makefile.am  NEWS  README  README.md  configure.ac
doc/: mmck-checks.texi  mmux-chicken-checks.texi
lib/: config.scm.in  mmck.checks.compat.scm  mmck.checks.core.scm  mmck.checks.scm  mmck.checks.version.scm  mmux-checks-compat.scm  mmux-checks-core.scm  mmux-checks-rsix.scm  mmux-checks-version.scm  mmux.checks.compat.scm  mmux.checks.core.scm  mmux.checks.scm  mmux.checks.version.scm
meta/autoconf/: mmux-chicken-scheme.m4
meta/automake/: mmck-rules.make  mmux-chicken-rules.make
meta/scripts/: mmux-chicken-checks.pc.in
meta/slackware/: slack-desc.in
tests/: test-demo.scm  test-version.scm
